# rt-weather-app

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py  vercel.json
static/: style.css
templates/: weather.html
